<resources>
    <string name="app_name">Nada Nusantara</string>
    <string name="lirik_apuse">Apuse kokon dao\nYarabe soren doreri\nWuf lenso bani nema baki pase\nApuse kokon dao\nYarabe soren doreri\nWuf lenso bani nema baki pase\nArafabye aswarakwar\nArafabye aswarakwar</string>
    <string name="lirik_tokecang">Tokecang tokecang bala gendir tosblong\nAngeun kacang sapependil kosong\nAya listrik di masigit meuni caang katingalna\nAya istri jangkung alit karangan dina pipina\nTokecang tokecang bala gendir tosblong\nAngeun kacang angeun kacang sapependil kosong</string>
    <string name="lirik_anak_kabing_saya">Mana di mana anak kambing saya\nAnak kambing tuan ada di pohon waru\n Mana di mana jantung hati saya\nJantung hati tuan ada di kampung baru\nCaca marica he hei\nCaca marica he hei\nCaca marica ada di kampung baru\nCaca marica he hei\nCaca marica he hei\nCaca marica ada di kampung baru</string>
    <string name="lirik_anging_mammiri">Anging mamiri ku pasang\nPitujui tontonganna\nTusaroa takkan lupa\nBatumi anging mamiri\nAnging ngerang dinging-dinging\nNamalontang saribuku\nE... aule...\nNa mangu rangi\nTutenaya, tutenaya parisina\nBatumi anging mamiri\nAnging ngerang dinging-dinging\nNamalontang saribuku\nE... aule...\nNa mangu rangi\nMato\'lorang... mato\'lorang je\'ne mato</string>
    <string name="lirik_bungong_jeumpa">Bungong jeumpa bungong jeumpa meugah di Aceh\nBungong teuleubeh, teuleubeh indah lagoina\nBungong jeumpa bungong jeumpa meugah di Aceh\nBungong teuleubeh, teuleubeh indah lagoina\n\nPuteh kuneng meujampu mirah\nBungong si ulah indah lagoina\nPuteh kuneng meujampu mirah\nBungong si ulah indah lagoina
\n\nLam sinar buleun lam sinar buleun angeen peu ayon\nLuroh meususon, mesuson nyang mala-mala (2x)\n\nKeubit that meubee meunyoe tatem com\nLeupah that harom si bungong jeumpa (2x)</string>
    <string name="lirik_gundul_pacul">Gundul gundul pacul cul\nGembelenganNyunggi nyunggi wakul kul\nGembelengan\nWakul ngglimpang\nSegone dadi sak latar\nWakul ngglimpang\nSegone dadi sak latar</string>
    <string name="lirik_manuk_dadali">Mesat ngapung luhur jauh di awang-awang\nMeberkeun jangjangna bangun taya karingrang\nSukuna ranggaos reujeung pamatukna ngeluk\nNgapak mega bari hiberna tarik nyuruwuk\nSaha anu bisa nyusul kana tandangna\nGandang jeung pertentang taya bandingannana\nDipikagimir dipikaserab ku sasama\nTaya karempan kasieun\n\nManuk Dadali manuk panggagahna\nPerlambang sakti Indonesia Jaya\nManuk Dadali pangkakon carana\nResep ngahiji rukun sakabehna\n\nHirup sauyunan tara pahiri-hiri\nSilih pikanyaah teu inggis bela pati\nManuk dadali ngandung siloka sinatria\nKeur sakumna Bangsa di Nagara Indonesia</string>
    <string name="lirik_kicir_kicir">Kicir kicir ini lagunya\nLagu lama ya tuan dari Jakarta\nSaya menyanyi ya tuan memang sengaja\nUntuk menghibur menghibur hati nan duka\nBurung dara burung merpati\nTerbang cepat ya tuan tiada tara\nBilalah kita ya tuan suka menyanyi\nbadanlah sehat ya tuan hati gembira\nBuah mangga enak rasanya\nSi manalagi ya tuan paling ternama\nSiapa saya ya tuan rajin bekerja\npasti menjadi menjadi warga berguna</string>
    <string name="lirik_rasa_sayange">Rasa sayange rasa sayang sayange\nEeee lihat dari jauh rasa sayang sayange\nRasa sayange rasa sayang sayange\nEeee lihat dari jauh rasa sayang sayange\nKalau ada sumur di ladang, Boleh kita menumpang mandi\nKalau ada umurku panjang, Boleh kita berjumpa lagi\nRasa sayange rasa sayang sayange\nEeee lihat dari jauh rasa sayang sayange\nMana kancil akan dikejar, Kedalam pasar cobalah cari\nMasih kecil rajin belajar, Sudah besar senanglah diri\nSi Amat mengaji tamat, Mengaji Qur’an di waktu fajar\nBiar lambat asal selamat, Tak kan lari gunung dikejar</string>
    <string name="lirik_potong_bebek">Potong bebek angsa, masak di kuali\nNona minta dansa, dansa empat kali\nDorong ke kiri, dorong ke kanan\nLa la la la la\nPotong bebek angsa, masak di kuali\nNona minta dansa, dansa empat kali\nDorong ke kiri, dorong ke kanan\nLa la la la la</string>
    <string name="lirik_ina">O ina ni keke, mange wisa ko\nMangewa aki Wenang, tumeles waleko\nDorimo siapa kotare maburi\nWokiak niko keke besusama nanate\nWeane weane oh kekeku\nBumenang niko keke hepaito mana nate\nO ina ni keke, mange wisa ko\nMangewa aki Wenang, tumeles waleko\nDorimo siapa kotare maburi\nWokiak niko keke besusama nanate\nWeane weane oh kekeku\nBumenang niko keke hepaito mana nate</string>
    <string name="lirik_yamko">Hee yamko rambe yamko aronawa kombe\nHee yamko rambe yamko aronawa kombe\nTeemi nokibe kubano ko bombe ko\nYuma no bungo awe ade\nTeemi nokibe kubano ko bombe ko\nYuma no bungo awe ade\nHongke hongke hongke riro\nHongke jombe jombe riro\nHongke hongke hongke riro\nHongke jombe jombe riro</string>
    <string name="lirik_ayam_den">Luruihlah jalan payakumbuah\nBabelok jalan ka andaleh\nDima hati indak kan rusuah\nAyam den lapeh, ay ay\nAyam den lapeh\n\nMandaki jalan pandaisikek\nManurun jalan ka palubuah\nDi ma hati indak ka maupek\nAwak takicuah, ay ay,\nAyam den lapeh\n\nSiku capang siku capeh\nSaikua tabang sikua lapeh\nLapehlah juo nan karimbo\nAi lah malang juo\n\nPagaruyuang Batusangka\nTampek bajalan urang Baso\nDuduak tamanuang tiok sabanta\nOi takana juo,\nAy ay, ayam den lapeh</string>
    <string name="lirik_injit">Jalan-jalan ke tanah Deli\nSungguh indah tempat tamasya\nKawan jangan bersedih\nMari nyanyi bersama-sama\n\nKalau pergi ke Surabaya\nNaik perahu dayung sendiri\nKalau hatimu sedih\nYang rugi diri sendiri\n\nInjit-injit semut\nSiapa sakit naik diatas\nInjit-injit semut\nWalau sakit jangan dilepas\n\nInjit-injit semut\nSiapa sakit naik diatas\nInjit-injit semut\nWalau sakit jangan dilepas\n\nNaik perahu ke Pulau Seribu\nSungguh indah si Pulau Karang\nSungguh malang nasibku\nPunya pacar diambil orang\n\n
Ramai sungguh bandar Jakarta\nTempat orang mengikat janji\nWalau pacar tak punya\nHati senang dapat bernyanyi</string>
    <string name="lirik_marencong">Marencong rencong kelongku\nmarencong rencong marencong rencong\nKelong nipassama riya, nakukelongang atu dendang baule\nNatupare pangurangi, lontaja eja menjo\nOwe dendanga da dum ba owe para mata bengko na</string>
    <string name="lirik_ampar">Ampar ampar pisang\nPisangku balum masak\nMasak bigi di hurung bari-bari\nMasak bigi di hurung bari-bari\nManggalepak manggalepok\nPatah kayu bengkok\nBengkok dimakan api\napinya cang curupan\nNang mana batis kutung\nDikitipi dawang (2x)\nAmpar ampar pisang\nPisangku balum masak\nMasak bigi di hurung bari-bari\nMasak bigi di hurung bari-bari</string>
    <string name="lirik_lir">Lir ilir lir ilir tandure wong sumilir\nTak ijo royo royo\nTak sengguh panganten anyar\nCah angon cah angon penekno blimbing kuwi\nLunyu lunyu penekno kanggo mbasuh dodotiro\nDodotiro dodotiro kumintir bedah ing pinggir\nDondomana jrumatane kanggo seba mengko sore\nMumpung padang rembulane\nMumpung jembar kalangane\nSun suroko surok hiyo\n\nLir ilir lir ilir tandure wong sumilir\nTak ijo royo royo\nTak sengguh panganten anyar\nCah angon cah angon penekno blimbing kuwi\nLunyu lunyu penekno kanggo mbasuh dodotiro\nDodotiro dodotiro kumintir bedah ing pinggir\nDondomana jrumatane kanggo seba mengko sore\nMumpung padang rembulane\nMumpung jembar kalangane
Sun suroko surok hiyo</string>
    <string name="lirik_jali">Ini dia si jali-jali\nLagunya enak lagunya enak merdu sekali\nCapek sedikit tidak perduli sayang\nAsalkan tuan asalkan tuan senang di hati\n\nPalinglah enak si mangga udang\nHei sayang disayang pohonnya tinggi pohonnya tinggi buahnya jarang\nPalinglah enak si orang bujang sayang\nKemana pergi kemana pergi tiada yang melarang\n\nDisana gunung disini gunung\nHei sayang disayang ditengah tengah ditengah tengah kembang melati\nDisana bingung disini bingung sayang\nSamalah sama samalah sama menaruh hati\n\nJalilah jali dari cikini sayang\nJali-jali dari cikini\nJalilah jali sampai disini</string>
    <string name="lyrics_naik">Naik, naik ke puncak gunung\nTinggi, tinggi sekali\nNaik, naik ke puncak gunung\nTinggi, tinggi sekali\nKiri, kanan, kulihat saja\nBanyak pohon cemara\nKiri, kanan, kulihat saja\nBanyak pohon cemara</string>
    <string name="lyrics_tebeonana">E do re re re\nE e do re re do\nE hau tebe o nana\nE hau tebe o nana\nTebe o nana nensa\nE hau nana nensa</string>
    <string name="lyrics_cikcikperiuk">Cik cik periook bilanga sumping dari jawe\nDatang nek krcibook bawa kepiting dua ekook\nCik cik periook bilanga sumping dari jawe\nDatang nek kecibook bawa kepiting dua ekook\nCak cak bur dalam bilanga picak iddung gigi rongak\nSape kitawa dolok dipancung raje tunggak hei</string>
    <string name="lyrics_bubuybulan">Bubuy bulan\nBubuy bulan sangray bentang\nPanon poe\nPanon poe disasate\n\nUnggal bulan, unggal bulan\nUnggal bulan abdi teang\nUnggal poe,unggal poe\nUnggal poe oge hade\n\nSitu Ciburuy\nlaukna hese dipancing\nNyeredet hate\nNingali ngeplak caina\n\nDuh eta saha nu ngalangkung\nunggal enjing\nNyeredet hate\nNingali sorot socana</string>
    <string name="lyrics_rekayorek">Rek ayo rek mlaku mlaku nang Tunjungan\nRek ayo rek rame rame bebarengan\nCak ayo cak sopo gelem melu aku\nCak ayo cak dolek kenalan cah ayu\nNgalor ngidul liwat toko ngumbah moto\nMasio mung nyenggal nyenggol ati lego\nSopo ngerti nasib Awak lagi mujur\nKenal anake sing dodol rujak cingur\nJok dipikir angger podho gak duwe sangu\nJok dipikir Angger podho gelem mlaku\nMangan tahu jok dicampur nganggo timun\nMalam minggu jok podho digawe nglamu</string>
    <string name="lyrics_sajojo">Sajojo, sajojo\nYumanamko misa papara\nSamuna muna-muna keke\nSamuna muna-muna keke\nSajojo, sajojo\nYumanamko misa papara\nSamuna muna-muna keke\nSamuna muna-muna keke\nKuserai, kusaserai, rai-rai-rai-rai\nKuserai, kusaserai, rai-rai-rai-rai\nInamgo mikim ye\nKia sore, kiasa sore, ye-ye\nInamgo mikim ye\nKia sore, kiasa sore</string>
    <string name="lyrics_indungindung">Indung indung kepala lindung\nHujan di udik di sini mendungAnak siapa pakai kerudung\nMata melirik kaki kesandung\nLa haula wala kuwwatta\nMata melihat seperti buta\nTiada daya tiada upaya\nMelainkan Tuhan Yang Maha Esa\nAduh aduh Siti Aishah\nMandi di kali rambutnya basah\nTidak sembahyang tidak puasa\nDi dalam kubur mendapat siksa\nDuduk goyang di kursi goyang\nBeduk subuh hampir siang\nBangunkan Ibu suruh sembahyang\nJadilah anak yang tersayang</string>
    <string name="lyrics_soleram">Soleram soleram soleram anak yang manis\nAnak manis janganlah dicium sayang\nKalau dicium merahlah pipinya\nAnak manis janganlah dicium sayang\nKalau dicium merahlah pipinya\n\nSatu dua tiga dan empat\nKalau tuan dapat kawan baru\nkawan lama dilupakan jangan\nKalau tuan dapat kawan baru\nkawan lama dilupakan jangan\n\nJalan-jalan ke pasar baru\njangan lupa belilah roti\nIni lagu jaman tempo dulu tuan\nMungkin sekarang dikenang kembali\nIni lagu jaman tempo dulu tuan\nMungkin sekarang dikenang kembali\n\nSoleram soleram soleram anak yang manis\nAnak manis janganlah dicium sayang\nKalau dicium merahlah pipinya\nAnak manis janganlah dicium sayang\nKalau dicium merahlah pipinya</string>
    <string name="tutorial1">Pertama, pilihlah tingkatan Mudah. Tingkatan Sedang dapat dimainkan setelah memperoleh 15 poin, dan tingkatan Sulit setelah 30 poin.</string>
    <string name="tutorial2">Kemudian pilih paket yang ingin anda mainkan. Setiap paket terdiri atas lima lagu-lagu daerah.</string>
    <string name="tutorial">Setiap paket dalam Nada Nusantara adalah paket satu sesi, artinya poin setiap lagu akan diperoleh apabila kelima lagu telah diselesaikan dan dijawab dengan benar.</string>
    <string name="tutorial3">Mainkan sesi dengan menekan ubin bergambar:</string>
    <string name="tutorial4">Setelah waktu selesai jawablah judul lagu tersebut. Satu jawaban benar akan mendapatkan satu poin.</string>
    <string name="tutorial5">Permainan berfokus pada baris paling bawah dimana ubin tersebut akan berpindah secara acak. </string>
</resources>